additional cleanup #7